force fx tracing

--- a/.github/workflows/test_fx.yml
+++ b/.github/workflows/test_fx.yml
@@ -2,9 +2,9 @@ name: FX / Python - Test
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -20,16 +20,19 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        pip install .[tests]
-        pip install git+https://github.com/huggingface/transformers.git
-    - name: Test with unittest
-      working-directory: tests
-      run: |
-        python -m pytest fx/optimization/test_transformations.py --exitfirst
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          pip install .[tests]
+
+      - name: Test with pytest
+        working-directory: tests
+        run: |
+          python -m pytest -s -v -x fx/optimization
