--- a/.github/workflows/test_utils.yml
+++ b/.github/workflows/test_utils.yml
@@ -20,14 +20,8 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space@main
-        if: matrix.os == 'ubuntu-20.04'
-        with:
-          tool-cache: true
-
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
@@ -42,4 +36,4 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          python -m pytest utils -s -v -x
+          python -m pytest -s -v utils
