--- a/.github/workflows/test_utils.yml
+++ b/.github/workflows/test_utils.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          python -m pytest -s -v utils
+          python -m pytest -s -vvvv utils
