keep large packages

--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -26,9 +26,9 @@ jobs:
         if: matrix.os == 'ubuntu-20.04'
         uses: jlumbroso/free-disk-space@main
         with:
-          # this might remove tools that are actually needed,
-          # if set to "true" but frees about 6 GB
           tool-cache: false
+          swap-storage: false
+          large-packages: false
 
       - name: Checkout code
         uses: actions/checkout@v4
