--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -48,4 +48,4 @@ jobs:
         working-directory: tests
         # pytest onnxruntime -m "not run_in_series" --durations=0 -vvvv -s -n auto
         run: |
-          pytest onnxruntime -m "run_in_series" --durations=0 -vvvv -s -k "test_inference_old_onnx_model"
+          pytest onnxruntime --durations=0 -vvvv -s -k "test_inference_old_onnx_model"
