--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -45,6 +45,7 @@ jobs:
           pip install .[tests,onnxruntime]
 
       - name: Test with pytest
+        working-directory: tests
         run: |
-          pytest tests/onnxruntime -m "run_in_series" --durations=0 -vvvv -s
-          pytest tests/onnxruntime -m "not run_in_series" --durations=0 -vvvv -s -n auto
+          pytest onnxruntime -m "run_in_series" --durations=0 -vvvv -s
+          pytest onnxruntime -m "not run_in_series" --durations=0 -vvvv -s -n auto
