--- a/.github/workflows/test_cli.yml
+++ b/.github/workflows/test_cli.yml
@@ -37,5 +37,6 @@ jobs:
           pip install .[tests,exporters,exporters-tf]
 
       - name: Test with pytest
+        working-directory: tests
         run: |
-          pytest tests/cli -s -vvvv --durations=0
+          pytest cli -s -vvvv --durations=0
