--- a/.github/workflows/test_fx.yml
+++ b/.github/workflows/test_fx.yml
@@ -24,15 +24,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
+          pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests]
 
       - name: Test with pytest
         working-directory: tests
         run: |
-          python -m pytest -s -v -x fx/optimization
+          pytest fx -s -vvvv --durations=0
