--- a/.github/workflows/test_fx.yml
+++ b/.github/workflows/test_fx.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest fx -s -vvvv --durations=0
+          pytest fx/optimization -s -vvvv --durations=0
