--- a/.github/workflows/test_cli.yml
+++ b/.github/workflows/test_cli.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest cli -s -vvvv --durations=0
+          pytest cli -n auto -s -vvvv --durations=0
