--- a/.github/workflows/test_export_onnx.yml
+++ b/.github/workflows/test_export_onnx.yml
@@ -16,9 +16,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
-        os: [ubuntu-20.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: [intel-cpu, 8-cpu, ci]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,13 +37,14 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest exporters/onnx -n auto -m "not tensorflow_test and not timm_test" -s --durations=0
+          pytest exporters/onnx -m "not tensorflow_test and not timm_test" -n auto -s -vvvv --durations=0
 
       - name: Install dependencies for tensorflow export
         run: |
+          pip install --no-cache-dir torch==2.1.2 torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests,exporters-tf]
 
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest exporters/onnx -n auto -m "tensorflow_test" -s --durations=0
+          pytest exporters/onnx -m "tensorflow_test" -n auto -s -vvvv --durations=0
