--- a/.github/workflows/test_export_onnx_cli.yml
+++ b/.github/workflows/test_export_onnx_cli.yml
@@ -16,9 +16,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
-        os: [ubuntu-20.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: [intel-cpu, 8-cpu, ci]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -37,4 +37,4 @@ jobs:
       - name: Test with unittest
         working-directory: tests
         run: |
-          pytest exporters/onnx -n auto -m "not tensorflow_test and not timm_test" -s --durations=0
+          pytest exporters/onnx -m "not tensorflow_test and not timm_test" -n auto -s -vvvv --durations=0
