--- a/.github/workflows/test_export_onnx_cli_timm.yml
+++ b/.github/workflows/test_export_onnx_cli_timm.yml
@@ -15,9 +15,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
-        os: [ubuntu-20.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: [intel-cpu, 8-cpu, ci]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
