--- a/.github/workflows/test_export_tflite.yml
+++ b/.github/workflows/test_export_tflite.yml
@@ -21,9 +21,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
-        os: [ubuntu-20.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: [intel-cpu, 8-cpu, ci]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -36,9 +36,10 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
+          pip install --no-cache-dir torch==2.1.2 torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests,exporters-tf]
 
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest exporters/tflite -s -vvvv --durations=0
+          pytest exporters/tflite/test_tflite_export.py -k "not quantization" -n auto -s -vvvv --durations=0
