--- a/.github/workflows/test_export_tflite_cli.yml
+++ b/.github/workflows/test_export_tflite_cli.yml
@@ -22,7 +22,7 @@ jobs:
       matrix:
         python-version: [3.8, 3.9]
 
-    runs-on: []
+    runs-on: [intel-cpu, 8-cpu, ci]
 
     steps:
       - name: Checkout code
@@ -42,4 +42,4 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest exporters/tflite -n auto -s -vvvv --durations=0
+          pytest exporters/tflite/test_exporters_tflite_cli.py -k "not quantization" -n auto -s -vvvv --durations=0
