--- a/.github/workflows/test_export_tflite_cli_quantization_fp16.yml
+++ b/.github/workflows/test_export_tflite_cli_quantization_fp16.yml
@@ -23,7 +23,8 @@ jobs:
         python-version: [3.8, 3.9]
         os: [ubuntu-20.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: [intel-cpu, 8-cpu, ci]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -42,4 +43,4 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest exporters/tflite/test_exporters_tflite_cli.py -n auto -k "float16_quantization" -s -vvvv --durations=0
+          pytest exporters/tflite/test_exporters_tflite_cli.py -k "float16_quantization" -n auto -s -vvvv --durations=0
