--- a/.github/workflows/test_export_tflite_cli_quantization_full_int8.yml
+++ b/.github/workflows/test_export_tflite_cli_quantization_full_int8.yml
@@ -21,9 +21,9 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
-        os: [ubuntu-20.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: [intel-cpu, 8-cpu, ci]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -42,4 +42,4 @@ jobs:
       - name: Test with unittest
         working-directory: tests
         run: |
-          pytest exporters/tflite/test_exporters_tflite_cli.py -n auto -k "full_int8_quantization_with_default_dataset" -s -vvvv --durations=0
+          pytest exporters/tflite/test_exporters_tflite_cli.py -k "full_int8_quantization_with_default_dataset" -n auto -s -vvvv --durations=0
