--- a/.github/workflows/test_onnx.yml
+++ b/.github/workflows/test_onnx.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Test with unittest
         working-directory: tests
         run: |
-          pytest onnx -s -vvvv --durations=0
+          pytest onnx -n auto -s -vvvv --durations=0
