--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -45,9 +45,9 @@ jobs:
       - name: Test with pytest (in series)
         working-directory: tests
         run: |
-          pytest onnxruntime -m "run_in_series" --durations=0 -vvvv -s
+          pytest onnxruntime -m "run_in_series" -s -vvvv --durations=0
 
       - name: Test with pytest (in parallel)
         working-directory: tests
         run: |
-          pytest onnxruntime -m "not run_in_series" --durations=0 -vvvv -s -n auto
+          pytest onnxruntime -m "not run_in_series" -n auto -s -vvvv --durations=0
