--- a/.github/workflows/test_utils.yml
+++ b/.github/workflows/test_utils.yml
@@ -15,8 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, macos-13]
         python-version: [3.8, 3.9]
+        os: [ubuntu-20.04, macos-13]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -37,4 +37,4 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          python -m pytest -s -vvvv utils
+          pytest utils -n auto -s -vvvv --durations=0
