--- a/.github/workflows/test_optimum_common.yml
+++ b/.github/workflows/test_optimum_common.yml
@@ -40,4 +40,4 @@ jobs:
         run: |
           # Setting HUGGINGFACE_CO_STAGING to true for only one job of the matrix as the staging tests cannot run in parallel.
           export HUGGINGFACE_CO_STAGING=${{ matrix.python-version == '3.8' && matrix.os == 'ubuntu-20.04' }}
-          pytest tests/test_*.py -s -vvvv --durations=0
+          pytest test_*.py -s -vvvv --durations=0
