--- a/.github/workflows/test_export_onnx.yml
+++ b/.github/workflows/test_export_onnx.yml
@@ -31,13 +31,13 @@ jobs:
       - name: Install dependencies for pytorch export
         run: |
           pip install --upgrade pip
-          pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+          pip install --no-cache-dir torch==2.1.2 torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests,exporters]
 
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest exporters/onnx -m "not tensorflow_test and not timm_test" -n auto -s -vvvv --durations=0
+          pytest exporters/onnx -m "not tensorflow_test and not timm_test" -s -vvvv --durations=0
 
       - name: Install dependencies for tensorflow export
         run: |
@@ -47,4 +47,4 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          pytest exporters/onnx -m "tensorflow_test" -n auto -s -vvvv --durations=0
+          pytest exporters/onnx -m "tensorflow_test" -s -vvvv --durations=0
