--- a/.github/workflows/test_export_tflite_cli_quantization.yml
+++ b/.github/workflows/test_export_tflite_cli_quantization.yml
@@ -1,4 +1,4 @@
-name: Exporters TFLite CLI Quantization Full INT8 Default Dataset / Python - Test
+name: Exporters TFLite CLI Quantization / Python - Test
 
 on:
   push:
@@ -16,20 +16,29 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  tflite_cli_quantization:
     strategy:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
+        quantization_schema:
+          [
+            tflite_float16_quantization,
+            tflite_int8_dynamic_quantization,
+            tflite_int8_quantization_with_custom_datasets,
+            tflite_int8_quantization_with_default_dataset,
+            tflite_int8x16_quantization_with_default_dataset,
+            tflite_full_int8_quantization_with_default_dataset,
+          ]
 
     runs-on: [intel-cpu, 8-cpu, ci]
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -39,7 +48,7 @@ jobs:
           pip install --no-cache-dir torch==2.1.2 torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests,exporters-tf]
 
-      - name: Test with unittest
+      - name: Test with pytest
         working-directory: tests
         run: |
-          pytest exporters/tflite/test_exporters_tflite_cli.py -k "full_int8_quantization_with_default_dataset" -n auto -s -vvvv --durations=0
+          pytest exporters/tflite/test_exporters_tflite_cli.py -k "${{ matrix.quantization_schema }}" -n auto -s -vvvv --durations=0
