--- a/.github/workflows/test_export_tflite.yml
+++ b/.github/workflows/test_export_tflite.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches: [main]
     paths:
+      - ".github/workflows/test_export_tflite.yml"
       - "optimum/exporters/tasks.py"
       - "optimum/exporters/tflite/**.py"
       - "tests/exporters/**.py"
@@ -41,5 +42,7 @@ jobs:
 
       - name: Test with pytest
         working-directory: tests
+        env:
+          HF_HOME: /mnt/cache/.cache/huggingface
         run: |
           pytest exporters/tflite/test_tflite_export.py -k "not quantization" -n auto -s -vvvv --durations=0
