--- a/.github/workflows/test_cli.yml
+++ b/.github/workflows/test_cli.yml
@@ -19,6 +19,7 @@ jobs:
         os: [ubuntu-20.04, macos-13]
 
     runs-on: ${{ matrix.os }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -36,5 +37,7 @@ jobs:
 
       - name: Test with pytest
         working-directory: tests
+        env:
+          HF_HOME: /mnt/cache/.cache/huggingface
         run: |
-          pytest cli -s -vvvv --durations=0
+          pytest cli -n auto -s -vvvv --durations=0
