--- a/.github/workflows/test_onnxruntime_train.yml
+++ b/.github/workflows/test_onnxruntime_train.yml
@@ -13,7 +13,8 @@ jobs:
       group: aws-g6-4xlarge-plus
 
     container:
-      image: nvidia/cuda:12.4.1-cudnn-runtime-ubuntu22.04
+      image: nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
+      options: --gpus all
 
     steps:
       - name: Checkout
