--- a/.github/workflows/test_onnxruntime_gpu.yml
+++ b/.github/workflows/test_onnxruntime_gpu.yml
@@ -24,11 +24,12 @@ jobs:
     if: ${{
       (github.event_name == 'push') ||
       (github.event_name == 'workflow_dispatch') ||
+      contains( github.event.pull_request.labels.*.name, 'gpu') ||
       contains(github.event.pull_request.labels.*.name, 'onnxruntime-gpu')
       }}
 
     runs-on:
-      group: aws-g6-4xlarge-plus
+      group: aws-g4-4xlarge-plus
 
     container:
       image: nvidia/cuda:12.4.1-cudnn-runtime-ubuntu22.04
