--- a/.github/workflows/test_onnxruntime_training.yml
+++ b/.github/workflows/test_onnxruntime_training.yml
@@ -24,11 +24,12 @@ jobs:
     if: ${{
       (github.event_name == 'push') ||
       (github.event_name == 'workflow_dispatch') ||
+      contains( github.event.pull_request.labels.*.name, 'training') ||
       contains( github.event.pull_request.labels.*.name, 'onnxruntime-training')
       }}
 
     runs-on:
-      group: aws-g6-4xlarge-plus
+      group: aws-g4-4xlarge-plus
 
     container:
       image: nvidia/cuda:11.8.0-cudnn8-devel-ubuntu22.04
@@ -58,8 +59,6 @@ jobs:
           pip uninstall -y opencv-python && pip install opencv-python-headless
 
       - name: Test with pytest
-        env:
-          RUN_SLOW: 1
         run: |
-          pytest tests/onnxruntime/training/nightly_test_trainer.py --durations=0 -s -vvvv
-          pytest tests/onnxruntime/training/nightly_test_examples.py --durations=0 -s -vvvv
+          RUN_SLOW=1 pytest tests/onnxruntime/training/nightly_test_trainer.py --durations=0 -s -vvvv
+          RUN_SLOW=1 pytest tests/onnxruntime/training/nightly_test_examples.py --durations=0 -s -vvvv
