--- a/.github/workflows/test_export_onnx_cli.yml
+++ b/.github/workflows/test_export_onnx_cli.yml
@@ -16,9 +16,10 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
-        os: [ubuntu-20.04]
 
-    runs-on: ${{ matrix.os }}
+    runs-on:
+      group: aws-general-8-plus
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -34,7 +35,7 @@ jobs:
           pip install .[tests,exporters]
           pip install git+https://github.com/huggingface/accelerate.git
 
-      - name: Test with pytest (in parallel)
+      - name: Test with pytest (parallel)
         working-directory: tests
         run: |
           pytest exporters/onnx/test_exporters_onnx_cli.py -m "not tensorflow_test and not timm_test" --durations=0 -vvvv -s -n auto
