--- a/.github/workflows/test_export_onnx_cli.yml
+++ b/.github/workflows/test_export_onnx_cli.yml
@@ -31,9 +31,10 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip uninstall -y opencv-python
+          pip install opencv-python-headless
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install .[tests,exporters]
-          pip install git+https://github.com/huggingface/accelerate.git
+          pip install .[tests,exporters] git+https://github.com/huggingface/accelerate.git
 
       - name: Test with pytest (parallel)
         working-directory: tests
